contrast colors corrected

--- a/Sass/clearance/_post.scss
+++ b/Sass/clearance/_post.scss
@@ -174,7 +174,7 @@
 }
 
 .post__text__link {
-   color: #FDCC50;
+   color: #fb3141;
 
 
    &:hover {
